--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
 <!--GALLERY-->
 
 <section class="g1 bb s1-padding">
-  <div class="container-fluid tc">
+  <div class="container tc">
       <h1 class="gh1">Gallery</h1>
       <h5 class="g-sh">Click on the images below:</h5>
   </div>
@@ -94,7 +94,7 @@
 <!--VIDEO GALLERY-->
 
 <section class="g1">
-    <div class="container-fluid tc">
+    <div class="container tc">
         <h1 class="gh">Video Gallery</h1>
     </div>
 
@@ -110,17 +110,17 @@
   <!--Slides-->
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <video loop autoplay muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="carousel-item">
-      <video loop autoplay muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="carousel-item">
-      <video loop autoplay muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/Agua-natural.mp4" type="video/mp4" />
       </video>
     </div>
