--- a/gallery.html
+++ b/gallery.html
@@ -110,17 +110,17 @@
   <!--Slides-->
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline controls width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="carousel-item">
-      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline controls width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="carousel-item">
-      <video autoplay loop muted playsinline width='100%' height='100%' class="video-fluid">
+      <video autoplay loop muted playsinline controls width='100%' height='100%' class="video-fluid">
         <source src="https://mdbootstrap.com/img/video/Agua-natural.mp4" type="video/mp4" />
       </video>
     </div>
